# ai-investmate

./: .env_template  .gitignore  README.md  install.sh  run.sh
app/ai-investmate-be/: README.md  pyproject.toml
app/ai-investmate-be/src/ai_investmate_be/: constants.py  db.py  file_processor.py  main.py  models.py
app/ai-investmate-be/src/ai_investmate_be/chat_response_handlers/: __init__.py  base.py  crewai_response.py  echo_response.py  rag.py  utils.py
app/ai-investmate-be/src/ai_investmate_be/chat_response_handlers/prompts/: stuffed_rag.jinja2
app/ai-investmate-be/src/ai_investmate_be/routers/: chat.py  file_ops.py  kg.py
app/ai-investmate-streamlit/: README.md  pyproject.toml
app/ai-investmate-streamlit/src/ai_investmate_streamlit/: main.py  models.py  utils.py
app/ai-investmate-worker/: README.md  pyproject.toml
app/ai-investmate-worker/src/ai_investmate_worker/: main.py
app/ai-investmate-worker/src/ai_investmate_worker/common/: db.py  kg.py  ner_config.cfg  ner_examples.yml  ner_re.py  rel_config.cfg
