[tool.poetry]
name = "ai-investmate-be"
version = "0.1.0"
description = "Backend for AI Investmate"
authors = ["Anurag Chatterjee <anuragchatterjee92@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_investmate_be", from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.110.0"
langchain = "0.1.16"
uvicorn = "0.29.0"
pypdf = "3.17.4"
python-multipart = "0.0.9"
Jinja2 = "3.1.3"
langchain-pinecone = "0.1.0"
sentence-transformers = "2.7.0"
faunadb = "4.5.1"
crewai = "0.28.8"
duckduckgo-search = "5.3.1"
langchain-openai = "0.0.5"
langchain-community = "0.0.38"
tavily-python = "0.3.3"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
ruff = "0.3.4"

[tool.black]
target-version = ["py39"]
line-length = 100
include = '\.pyi?$'
exclude = '''
    \.git |
    \.__pycache__|
    \.hg|
    \.mypy_cache|
    \.tox|
    \.venv|
    _build|
    buck-out|
    build|
    dist
    '''

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
