[tool.poetry]
name = "ai-investmate-streamlit"
version = "0.1.0"
description = "Streamlit frontend for AI INvestmate"
authors = ["Anurag Chatterjee <anuragchatterjee92@gmail.com>"]
readme = "README.md"
packages = [{include = "src/ai_investmate_streamlit"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.34.0"
pydantic = "2.7.1"
networkx = "3.3"
matplotlib = "3.9.0"
plotly = "5.22.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
